--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -19,7 +19,17 @@
       <li>Contacto</li>
     </ul>
 
+    <h2>Quiénes somos</h2>
 
+    <p>Fabio di Noia</p>
+    <p></p>
+
+    <img src="./fabio-photo.jpeg" alt="Fabio di Noia">
+
+
+    <p>Ariadna Frias</p>
+
+    <img src="./ari-photo.jpeg" alt="Ariadna Frias">
 
 
 
