cv page plus improvment website

--- a/cv.html
+++ b/cv.html
@@ -21,14 +21,14 @@
     </nav>
   </header>
 
-  <form>
-    <label for="name">nombre: </label>
-    <input type="text" name="name" id="name">
-    <label for="email">e-mail:</label>
-    <input type="email" name="email" id="email">
-    <label for="comments">comentarios</label>
-    <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
-    <input type="submit">
-  </form>
+  <p>Fabio di Noia</p>
+  <p></p>
+
+  <img src="Captura de pantalla 2023-01-17 a las 20.22.17.png" alt="Fabio di Noia">
+
+
+  <p>Ariadna Frias</p>
+
+  <img src="Captura de pantalla 2023-01-17 a las 20.24.06.png" alt="Ariadna Frias">
 
 </html>
