--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <h1>Doggy friends</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Quien Somos</a></li>
-        <li><a href="#">Nuetro CV</a></l>
-        <li><a href="#">Contacto</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes-somos.html">Quien Somos</a></li>
+        <li><a href="cv.html">Nuetro CV</a></l>
+        <li><a href="contants.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
+
+  <img src="Captura de pantalla 2023-01-17 a las 20.29.24.png" alt="perros">
 
 </html>
