--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -11,14 +11,14 @@
 <body>
   <header>
     <h1>Doggy friends</h1>
-
-    <ul>
-      <li>Home</li>
-      <li>Quiénes Somos</li>
-      <li>Nuestros CV</li>
-      <li>Contacto</li>
-    </ul>
-
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="quienes-somos.html">Quien Somos</a></li>
+        <li><a href="cv.html">Nuetro CV</a></l>
+        <li><a href="contants.html">Contacto</a></li>
+      </ul>
+    </nav>
     <h2>Quiénes somos</h2>
 
     <p>Fabio di Noia</p>
